waiting until failed before moving forward with test